- Fix menu bar ul being floated right on FF - Make phone number with tel:prefix underline on mobile devices

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -82,6 +82,10 @@ Media Queries
 	    width: 100%;
 	}
 
+	a[href^="tel:"] {
+		text-decoration: underline !important;
+	}
+
 	.sem_breadcrumbs,
 	#navbar #searchform {
 		display: none;
