--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Semiologic Pinnacle
 Theme URI: http://www.semiologic.com/software/sem-pinnacle/
 Description: The latest Semiologic Theme building on the widget and panel-centric approach of Semiologic Reloaded.   The Pinnacle theme is HTML5, CSS3, and responsive meant to look the same across all devices.
-Version: 2.1.0
+Version: 2.1.1 dev
 Author: Mike Koepke
 Author URI: http://www.semiologic.com
 Text Domain: sem-pinnacle
@@ -1057,6 +1057,7 @@ Site Navigation
 	width:100%;
 	z-index:50;
 	position: relative;
+	clear: both;
 }
 
 #header_nav ul.justified {
